fix(theme): post-card-image hide overflow

--- a/packages/saber-theme-mina/styles/components/index.styl
+++ b/packages/saber-theme-mina/styles/components/index.styl
@@ -18,6 +18,7 @@
       background-position: 50%
       background-repeat: no-repeat
       background-size: cover
+      overflow: hidden
       &:after
         content: ""
         display: block
